--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta property="og:description" content="Cloverleaf is a free, open source app to replace your password manager without storing your passwords anywhere." />
     <meta property="og:title" content="Cloverleaf" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://childishgiant.github.io/cloverleaf/" />
-    <meta property="og:image" content="https://childishgiant.github.io/perdola/android-chrome-512x512.png" />
-    <meta property="og:image:secure_url" content="https://childishgiant.github.io/perdola/android-chrome-512x512.png" />
+    <meta property="og:url" content="https://cloverleaf.app" />
+    <meta property="og:image" content="https://cloverleaf.app/android-chrome-512x512.png" />
+    <meta property="og:image:secure_url" content="https://cloverleaf.app/android-chrome-512x512.png" />
     <meta property="og:image:width" content="512"/>
     <meta property="og:image:height" content="512"/>
     <meta property="og:locale" content="en_GB" />
-    
+
     <!-- Twitter's proprietary OpenGraph type thing -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@ChildishGiant" />
     <meta name="twitter:creator:id" content="871150969417084928" />
     <meta name="twitter:title" content="Cloverleaf" />
     <meta name="twitter:description" content="Cloverleaf is a free, open source app to replace your password manager without storing your passwords anywhere." />
-    <meta name="twitter:image" content="https://childishgiant.github.io/perdola/android-chrome-512x512.png" />
+    <meta name="twitter:image" content="https://cloverleaf.app/android-chrome-512x512.png" />
   </head>
 
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
   <link rel="canonical" href="https://cloverleaf.app">
-  <script>location="https://cloverleaf.app"</script>
+  <script>location=`https://cloverleaf.app${location.search}`</script>
   <meta http-equiv="refresh" content="0; url=https://cloverleaf.app">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
